--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <a href="https://sh1ura.github.io/presentimer/">PresenTimer</a>
+    <H3><a href="https://sh1ura.github.io/presentimer/">PresenTimer / プレゼンタイマー</a></H3><br>
+    <img width="400" src="timer-ss.jpg"><br>
+    <ul>
+      <li>English version : <a href="https://sh1ura.github.io/presentimer/">https://sh1ura.github.io/presentimer/</a>
+      <li>Japanese version / 日本語版　: <a href="https://sh1ura.github.io/presentimer/jp">https://sh1ura.github.io/presentimer/jp</a>
   </body>
 </html>
